# pyemu

./: .coverage  .coveragerc  .coveralls.yml  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CITATION.cff  MANIFEST  MANIFEST.in  README.md  appveyor.yml  conftest.py  get_pestpp.md  mat_handler.py  new_version_steps.txt  pst_handler.py  pyemu.py  pyemu_plot.py  pyproject.toml  pytest.ini  requirements.travis.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.jco  versioneer.py
.github/workflows/: ci.yml  docs.yml
10par_xsec_testing/master/: gen_parensemble.py  pest.ipar  pest.isen  pest.par.usum.csv  pest.post.cov  pest.rec  pest.rmr  pest.rnu  sweep_in.csv
10par_xsec_testing/template_mac/: model.py  pest.fpr  pest.rnj  pest.rns  sweep_in.csv  sweep_out.csv
autotest/: .coveragerc  Abstract_Moo_test.py  BenchmarkTest.py  GeneticOperators_test.py  NSGA_II_tests.py  ParetoObjFunc_tests.py  Spea2_tests.py  _setup_freyberg.hyd.bin.dat.csv  autotest_notebooks.py  conftest.py  da_tests.py  dsi_tests.py  emulator_tests.py  en_tests.py  ennlouu_tests.py  evol_proto_tests.py  full_meal_deal_tests.py  full_meal_deal_tests_2.py  full_meal_deal_tests_ignore.py  get_pestpp_tests.py  la_tests.py  mat_tests.py  mc_tests.py  mc_tests_ignore.py  metrics_tests.py  moouu_tests.py  pest_file_creator.py  plot_tests.py  pst_from_tests.py  pst_tests.py  pst_tests_2.py  pst_tests_ignore.py  pytest.ini  result_handler_prototype.py  smoother_tests.py  smoother_tests_da.py  smoother_tests_ignore.py  sweep_in.csv  transformer_tests.py  utils_tests.py  (+3 more)
autotest/da/: .gitignore  freyberg.py  two_dim_flow.py
autotest/en/: pest.pst
autotest/ends_master/: freyberg6.dis  freyberg6.ghb  freyberg6.ic  freyberg6.lst  freyberg6.lst.ins  freyberg6.nam  freyberg6.npf  freyberg6.rch  freyberg6.rch.tpl  freyberg6.sfr  (+40 more)
doc/: Makefile  make.bat
docs/: Makefile  conf.py  conf.py.bak  index.rst  index.rst.bak  make.bat  pip.reqs  pyemu.docx  pyemu.mat.rst  pyemu.plot.rst  pyemu.prototypes.rst  pyemu.pst.rst  requirements.rtd.txt
docs2/: Makefile  conf.py  index.rst
etc/: environment.yml  setup_test_env.md  setup_test_env.py
examples/: MODFLOW_to_PEST_even_more_boss.ipynb  MatrixCovariance_demo.ipynb  NSMCexample_freyberg.ipynb  PST_to_pyemu_to_Schur_Overview.ipynb  Schur_example.ipynb  Schurexample.ipynb  Schurexample.tex  Schurexample_freyberg.ipynb  Schurexample_freyberg_FINAL.ipynb  Schurexample_freyberg_drop.ipynb  Schurexample_freyberg_flip.ipynb  Schurexample_henry.ipynb  bayes_linear_estimation_freyberg.ipynb  clear_output_all.py  domain.eps  error_variance_example.ipynb  errvarexample.aux  errvarexample.fdb_latexmk  errvarexample.ipynb  errvarexample.out  errvarexample.tex  errvarexample_freyberg.ipynb  errvarexample_henry.ipynb  exploring_results_handlers.ipynb  gpr_emulation_hosaki.ipynb  helpers.py  mat_demo.ipynb  mat_handler_demo.ipynb  modflow_to_pest_like_a_boss.ipynb  next_df_0_0_org.csv  next_df_0_1_org.csv  next_df_1_0_uncfuture.csv  next_df_1_1_uncfuture.csv  notest_MODFLOW_to_PEST_even_more_boss.ipynb  notest_PST_to_pyemu_to_Schur_Overview.ipynb  notest_freyberg_from_scratch.ipynb  notest_modflow_to_pest_like_a_boss.ipynb  notest_working_stack_demo.ipynb  plot_domain.py  plot_domain_for_note.py  (+11 more)
for_nick/: tseriesVERArad.jco  tseriesVERArad.pst
misc/: graph_pyemu.py
pyemu/: __init__.py  _version.py  da.py  eds.py  en.py  ev.py  evol_proto.py  inf.py  la.py  logger.py  mc.py  pyemu_warnings.py  sc.py  smoother.py
tests/: utils_tests.py
(+3326 files in other folders)
