[build-system]
requires = [
    "setuptools >= 61",
    'tomli; python_version < "3.11"',
]
build-backend = "setuptools.build_meta"

[project]
name = "pyemu"
dynamic = ["version"]
authors = [
    { name = "Jeremy White", email = "jtwhite1000@gmail.com" },
    { name = "Mike Fienen", email = "mnfienen@usgs.gov" },
    { name = "Brioch Hemmings", email = "b.hemmings@gns.cri.nz" },
]
description = "pyEMU is a set of python modules for interfacing with PEST and PEST++"
readme = "README.md"
keywords = ["pest", "pestpp"]
license = { text = "BSD 3-Clause" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
optional = [
    "flopy",
    "matplotlib",
    "pyshp",
    "scipy",
    "shapely",
    "jinja2",  # for to_latex options
    "pypestutils"
]
test = [
    "coveralls",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "flaky",
    "nbmake",
    "modflow-devtools",
]
docs = [
    "pyemu[optional]",
    "sphinx <7.2", # sphinx 7.2 challenges with iterating over CSS
    "sphinx-autoapi",
    "sphinx-rtd-theme >=1.3.0rc1",
]

[project.scripts]
get-pestpp = "pyemu.utils.get_pestpp:cli_main"

[project.urls]
documentation = "https://pyemu.readthedocs.io/"
repository = "https://github.com/pypest/pyemu"

[tool.setuptools.packages.find]
include = ["pyemu", "pyemu.*"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "pyemu/_version.py"
versionfile_build = "pyemu/_version.py"
tag_prefix = ""

[tool.codespell]
check-filenames = true
#skip = "*.grb,*.pdf,./dependencies"
skip = "*.fpr,*.grb,*.pdf,*.pfm,*.pst,*.tex,*.list,*.rec,./docs/_build,./codespell.ignore"
ignore-regex = "[A-Za-z0-9+/\\\\]{100,}"  # base64-encoded data in *.ipynb files
ignore-words-list = [
    "afile",
    "coo",
    "fo",
    "fpr",
    "dum",
    "ect",
    "ons",
    "oen",
    "nam",
    "ptd",
    "delt",
    "parin",
    "gage",
    "wel",
]
